--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation'androidx.recyclerview:recyclerview:1.2.1'
 implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.2.+'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
 
 }
